@@ -4,6 +4,8 @@
 =======================================================
 
 
+27 Dec 2008      bands.f90 program made parallel over kpts. (AF)
+
 25 Dec 2008      Bug fixed in ~want/libs (zmat_hdotp). Merry Christmas. 
                  iwin_min, iwin_max, ifroz_min, ifroz_max variables added. (AF)
 
